EncryptedRepository lifecycle